[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Torretta.gd" type="Script" id=1]
[ext_resource path="res://models/torretta.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/sparo3.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=1]
radius = 1.59123

[sub_resource type="SphereShape" id=6]
radius = 65.0

[sub_resource type="CylinderMesh" id=7]
top_radius = 0.05
bottom_radius = 0.05
height = 0.5
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[node name="Torretta" type="StaticBody"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )

[node name="boccaFuocoUp" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64955, 0 )

[node name="MeshInstance" type="MeshInstance" parent="boccaFuocoUp"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="boccaFuocoDown" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.65, 0 )

[node name="MeshInstance2" type="MeshInstance" parent="boccaFuocoDown"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 5 )

[node name="torretta" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 0, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
